infrastructure/dnsmasq/service.yaml
---
# ClusterIP Service (internal cluster access)
apiVersion: v1
kind: Service
metadata:
  name: dnsmasq
  namespace: default
  labels:
    app: dnsmasq
spec:
  type: ClusterIP
  selector:
    app: dnsmasq
  ports:
  - name: dns-tcp
    port: 53
    targetPort: 53
    protocol: TCP
  - name: dns-udp
    port: 53
    targetPort: 53
    protocol: UDP

---
# NodePort Service (for router access)
apiVersion: v1
kind: Service
metadata:
  name: dnsmasq-nodeport
  namespace: default
  labels:
    app: dnsmasq
spec:
  type: NodePort
  selector:
    app: dnsmasq
  ports:
  - name: dns-tcp
    port: 53
    targetPort: 53
    nodePort: 30053
    protocol: TCP
  - name: dns-udp
    port: 53
    targetPort: 53
    nodePort: 30053
    protocol: UDP
